# backend/src/quicklook/coordinator/api/app.py
@@ -11,8 +11,6 @@ from sqlalchemy import select
 import quicklook.mylogging
 from quicklook.comm.coordinator import lifespan as coordinator_lifespan
 from quicklook.comm.coordinator import router as comm_coordinator_router
-from quicklook.datasource import get_datasource
-from quicklook.datasource.types import VisitResolutionError
 from quicklook.utils.http_client import managed_session
 from quicklook.coordinator.api.deps import dep_visit_name
 from quicklook.coordinator.api.status import router as status_router
@@ -64,11 +62,7 @@ type JobDict = dict[VisitName, Job]
 
 @app.post('/quicklooks')
 async def route_create_quicklook(params: CreateQuicklookRequest):
-    try:
-        visit = await get_datasource().resolve_visit(VisitName(params.visit))
-    except VisitResolutionError as e:
-        raise HTTPException(status_code=404, detail=str(e)) from e
-
+    visit = VisitName(params.visit)
     async with get_db_session() as session:
         result = await session.execute(select(Quicklook).where(Quicklook.visit_name == visit))
         quicklook = result.scalar_one_or_none()
