# frontend/app/openapi.json
@@ -69,7 +69,7 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "pattern": "^\\w+:\\w+:\\w+$",
+                            "pattern": "^[^:/]+:[^:/]+:[^:/]+$",
                             "title": "Visit Name"
                         }
                     },
@@ -134,7 +134,7 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "pattern": "^\\w+:\\w+:\\w+$",
+                            "pattern": "^[^:/]+:[^:/]+:[^:/]+$",
                             "title": "Visit Name"
                         }
                     },
@@ -225,7 +225,7 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "pattern": "^\\w+:\\w+:\\w+$",
+                            "pattern": "^[^:/]+:[^:/]+:[^:/]+$",
                             "title": "Visit Name"
                         }
                     }
@@ -263,7 +263,7 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "pattern": "^\\w+:\\w+:\\w+$",
+                            "pattern": "^[^:/]+:[^:/]+:[^:/]+$",
                             "title": "Visit Name"
                         }
                     }
@@ -319,7 +319,7 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "pattern": "^\\w+:\\w+:\\w+$",
+                            "pattern": "^[^:/]+:[^:/]+:[^:/]+$",
                             "title": "Visit Name"
                         }
                     }
@@ -359,7 +359,7 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "pattern": "^\\w+:\\w+:\\w+$",
+                            "pattern": "^[^:/]+:[^:/]+:[^:/]+$",
                             "title": "Visit Name"
                         }
                     }
@@ -529,6 +529,45 @@
                 }
             }
         },
+        "/api/visits/{visit_name}/resolution": {
+            "get": {
+                "summary": "Get Visit Resolution",
+                "operationId": "get_visit_resolution",
+                "parameters": [
+                    {
+                        "name": "visit_name",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "title": "Visit Name"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ResolvedVisitInfo"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/exposures/{id}/types": {
             "get": {
                 "summary": "Get Exposure Data Types",
@@ -583,7 +622,7 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "pattern": "^\\w+:\\w+:\\w+$",
+                            "pattern": "^[^:/]+:[^:/]+:[^:/]+$",
                             "title": "Visit Name"
                         }
                     },
@@ -1510,6 +1549,30 @@
                     "wcs"
                 ],
                 "title": "QuicklookMetadataReady"
+            },
+            "ResolvedVisitInfo": {
+                "properties": {
+                    "visit_name": {
+                        "type": "string",
+                        "title": "Visit Name"
+                    },
+                    "detector": {
+                        "anyOf": [
+                            {
+                                "type": "integer"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "Detector"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "visit_name"
+                ],
+                "title": "ResolvedVisitInfo"
             },
             "ShutdownResponse": {
                 "properties": {
